Docs/k8s-Examples/09-NetworkPolicies/dest-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: dest-app
  name: dest-app
  namespace: ns-dest
spec:
  containers:
  - image: nginx
    name: dest-app
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
