Docs/k8s-Examples/09-NetworkPolicies/source-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: source-app
  name: source-app
  namespace: ns-source
spec:
  containers:
  - image: nginx
    name: source-app
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
