Docs/k8s-Examples/09-NetworkPolicies/deny-all-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: ns-dest
spec:
  podSelector: {}
  policyTypes:
  - Ingress
